--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "060201.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon 060201.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "express-handlebars": "^5.3.4",
     "hbs": "^4.1.2",
     "mongodb": "^4.1.4",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14"
   }
 }
